moved some packages to modules

--- a/gcc/4.9.2
+++ b/gcc/4.9.2
@@ -31,7 +31,12 @@ setenv          GCC_PATH        $GCC_CURPATH
 setenv          GCC_VERSION     $GCC_LEVEL
 setenv          GNU_VERSION     $GCC_LEVEL
 
+# PATH is complex because of our use of ccache and its symbolic linkage
+remove-path     PATH            /home/aprokop/bin
+remove-path     PATH            /home/aprokop/local/bin
 prepend-path    PATH            $GCC_CURPATH/bin
+prepend-path    PATH            /home/aprokop/local/bin
+prepend-path    PATH            /home/aprokop/bin
 prepend-path    MANPATH         $GCC_CURPATH/share/man
 prepend-path    INFOPATH        $GCC_CURPATH/share/info
 prepend-path    LD_LIBRARY_PATH $GCC_CURPATH/lib
