--- a/gcc/4.9.2
+++ b/gcc/4.9.2
@@ -48,6 +48,6 @@ prepend-path    LD_LIBRARY_PATH $GCC_CURPATH/lib:$GCC_CURPATH/lib64
 setenv          CC              gcc
 setenv          CXX             g++
 setenv          OMPI_MPICC      gcc
-setenv          OMPI_CFLAGS     -fdiagnostics-color
 setenv          OMPI_MPICXX     g++
-setenv          OMPI_CXXFLAGS   -fdiagnostics-color
+setenv          OMPI_CFLAGS     "-fdiagnostics-color"
+setenv          OMPI_CXXFLAGS   "-fdiagnostics-color"
