gcc: *: renamed LEVEL to VERSION

--- a/gcc/4.9.1
+++ b/gcc/4.9.1
@@ -5,7 +5,7 @@ conflict gcc intel llvm
 module load gdb
 
 proc ModulesHelp { } {
-    global GCC_LEVEL
+    global GCC_VERSION
     global GCC_CURPATH
     if { [ file exists $GCC_CURPATH/release_info ] } {
         set REL_INFO [ exec cat $GCC_CURPATH/release_info ]
@@ -15,7 +15,7 @@ proc ModulesHelp { } {
     puts stderr "$REL_INFO"
     puts stderr ""
     puts stderr "==================================================================="
-    puts stderr "To re-display gcc/$GCC_LEVEL release information,"
+    puts stderr "To re-display gcc/$GCC_VERSION release information,"
     puts stderr "type:    less $GCC_CURPATH/release_info"
     puts stderr "==================================================================="
     puts stderr ""
@@ -26,12 +26,12 @@ set is_module_rm  [module-info mode remove]
 set sys           [uname sysname]
 set os            [uname release]
 
-set GCC_LEVEL 4.9.1
-set GCC_CURPATH /home/aprokop/local/opt/gcc-$GCC_LEVEL
+set GCC_VERSION 4.9.1
+set GCC_CURPATH /home/aprokop/local/opt/gcc-$GCC_VERSION
 
 setenv          GCC_PATH        $GCC_CURPATH
-setenv          GCC_VERSION     $GCC_LEVEL
-setenv          GNU_VERSION     $GCC_LEVEL
+setenv          GCC_VERSION     $GCC_VERSION
+setenv          GNU_VERSION     $GCC_VERSION
 
 set-alias       gcc             "gcc -fdiagnostics-color=auto"
 
