--- a/openmpi/1.8.4
+++ b/openmpi/1.8.4
@@ -18,3 +18,4 @@ prepend-path    CPATH           $OPENMPI_PATH/include
 prepend-path    LD_LIBRARY_PATH $OPENMPI_PATH/lib
 prepend-path    MANPATH         $OPENMPI_PATH/share/man
 prepend-path    INFOPATH        $OPENMPI_PATH/share/info
+prepend-path    PKG_CONFIG_PATH $OPENMPI_PATH/lib/pkgconfig
