gcc: added OMPI_CC and OMPI_CXX env vars

--- a/gcc/4.7.2
+++ b/gcc/4.7.2
@@ -46,6 +46,8 @@ prepend-path    INFOPATH        $GCC_CURPATH/share/info
 prepend-path    LD_LIBRARY_PATH $GCC_CURPATH/lib:$GCC_CURPATH/lib64
 
 setenv          CC              gcc
-setenv          CXX             g++
+setenv          OMPI_CC         gcc
 setenv          OMPI_MPICC      gcc
+setenv          CXX             g++
+setenv          OMPI_CXX        g++
 setenv          OMPI_MPICXX     g++
