--- a/gcc/4.9.1
+++ b/gcc/4.9.1
@@ -50,8 +50,10 @@ prepend-path    INFOPATH        $GCC_CURPATH/share/info
 prepend-path    LD_LIBRARY_PATH $GCC_CURPATH/lib:$GCC_CURPATH/lib64
 
 setenv          CC              gcc
-setenv          CXX             g++
+setenv          OMPI_CC         gcc
 setenv          OMPI_MPICC      gcc
+setenv          CXX             g++
+setenv          OMPI_CXX        g++
 setenv          OMPI_MPICXX     g++
 setenv          OMPI_CFLAGS     "-fdiagnostics-color"
 setenv          OMPI_CXXFLAGS   "-fdiagnostics-color"
