--- a/yakuake/2.9.7
+++ b/yakuake/2.9.7
@@ -7,6 +7,6 @@ set sys           [uname sysname]
 set os            [uname release]
 
 set YAKUAKE_VERSION 2.9.7
-set YAKUAKE_PATH /home/aprokop/local/opt/yakuake-$YAKUAKE_VERSION
+set YAKUAKE_PATH $env(HOME)/local/opt/yakuake-$YAKUAKE_VERSION
 
 prepend-path    PATH            $YAKUAKE_PATH/bin
