--- a/advisor/xe2016.1
+++ b/advisor/xe2016.1
@@ -6,7 +6,7 @@ proc ModulesHelp { } {
 set is_module_rm  [module-info mode remove]
 
 set ADVISOR_VERSION  2016.1.20.440949
-set ADVISOR_PATH     /home/aprokop/local/opt/intel/advisor_xe_${ADVISOR_VERSION}
+set ADVISOR_PATH     $env(HOME)/local/opt/intel/advisor_xe_${ADVISOR_VERSION}
 
 setenv ADVISOR_XE_2016_DIR ${ADVISOR_PATH}
 
