--- a/amgx/2014_12_22-cuda-6.5
+++ b/amgx/2014_12_22-cuda-6.5
@@ -13,6 +13,6 @@ set os            [uname release]
 set AMGX_VERSION 2014_12_22-cuda-6.5
 set AMGX_PATH /opt/nvidia/amgx-$AMGX_VERSION
 
-setenv          LM_LICENSE_FILE     /home/aprokop/.nvidia/licenses/amgx_trial-exp-Sep2015.lic
+setenv          LM_LICENSE_FILE     $env(HOME)/.nvidia/licenses/amgx_trial-exp-Sep2015.lic
 
 prepend-path    LD_LIBRARY_PATH $AMGX_PATH/lib
