--- a/cyphon/0.20.1
+++ b/cyphon/0.20.1
@@ -7,7 +7,7 @@ set sys           [uname sysname]
 set os            [uname release]
 
 set CYPHON_VERSION  0.20.1
-set CYPHON_PATH     /home/aprokop/local/opt/cyphon-$CYPHON_VERSION
+set CYPHON_PATH     $env(HOME)/local/opt/cyphon-$CYPHON_VERSION
 
 prepend-path    PATH            $CYPHON_PATH/bin
 prepend-path    PYTHONPATH      $CYPHON_PATH/lib64/python2.6/site-packages
