--- a/extundelete/0.2.4
+++ b/extundelete/0.2.4
@@ -7,6 +7,6 @@ set sys           [uname sysname]
 set os            [uname release]
 
 set EXTUNDELETE_VERSION     0.2.4
-set EXTUNDELETE_PATH        /home/aprokop/local/opt/extundelete-$EXTUNDELETE_VERSION
+set EXTUNDELETE_PATH        $env(HOME)/local/opt/extundelete-$EXTUNDELETE_VERSION
 
 prepend-path    PATH       $EXTUNDELETE_PATH/bin
