--- a/mpich/3.1.3
+++ b/mpich/3.1.3
@@ -11,7 +11,7 @@ set sys           [uname sysname]
 set os            [uname release]
 
 set MPICH_VERSION 3.1.3
-set MPICH_PATH /home/aprokop/local/opt/mpich-$MPICH_VERSION
+set MPICH_PATH $env(HOME)/local/opt/mpich-$MPICH_VERSION
 
 prepend-path    PATH            $MPICH_PATH/bin
 prepend-path    CPATH           $MPICH_PATH/include
