--- a/valgrind/3.10.1
+++ b/valgrind/3.10.1
@@ -7,7 +7,7 @@ set sys           [uname sysname]
 set os            [uname release]
 
 set VALGRIND_VERSION    3.10.1
-set VALGRIND_PATH       /home/aprokop/local/opt/valgrind-$VALGRIND_VERSION
+set VALGRIND_PATH       $env(HOME)/local/opt/valgrind-$VALGRIND_VERSION
 
 prepend-path    CPATH               $VALGRIND_PATH/include
 prepend-path    LD_LIBRARY_PATH     $VALGRIND_PATH/lib
