--- a/wcalc/2.4.1
+++ b/wcalc/2.4.1
@@ -7,7 +7,7 @@ set sys           [uname sysname]
 set os            [uname release]
 
 set WCALC_VERSION     2.4.1
-set WCALC_PATH        /home/aprokop/local/opt/wcalc-$WCALC_VERSION
+set WCALC_PATH        $env(HOME)/local/opt/wcalc-$WCALC_VERSION
 
 prepend-path    PATH            $WCALC_PATH/bin
 prepend-path    MANPATH         $WCALC_PATH/share/man
